<resources>

    <string name="app_name">Find My Way</string>
    <string name="details">Details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="find_my_way_logo">Find my way logo</string>
    <string name="welcome">Welcome to Find My Way</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="fullname">Fullname</string>
    <string name="logout">Logout</string>
    <string name="access_token">sk.eyJ1IjoibmFzaHlsbCIsImEiOiJja2RvcjljaHAwajlpMnRxb2Q4aW52NHRmIn0.j3IfsfP_xCTa2BK_yTmjRw</string>
    <string name="start_navigating">Start Navigating</string>
    </resources>